# ipylab

./: .copier-answers.yml  .gitpod.yml  .pre-commit-config.yaml  README.md  RELEASE.md  package-lock.json  package.json  pyproject.toml  ruff_defaults.toml
.github/workflows/: build.yml  packaging.yml
docs/: environment.yml
examples/: code_editor.ipynb  commands.ipynb  css_stylesheet.ipynb  dialogs.ipynb  generic.ipynb  icons.ipynb  ipytree.ipynb  menu.ipynb  notifications.ipynb  plugins.ipynb  resize_box.ipynb  sessions.ipynb  simple_output.ipynb  toolbar.ipynb  widgets.ipynb
ipylab/: __init__.py  __main__.py  _frontend.py  code_editor.py  commands.py  common.py  connection.py  css_stylesheet.py  dialog.py  hookspecs.py  ipylab.py  jupyterfrontend.py  labapp.py  launcher.py  lib.py  log.py  log_viewer.py  menu.py  notification.py  scripts.py  sessions.py  shell.py  simple_output.py  toolbar.py  widgets.py
ipylab/_compat/: enum.py  typing.py
pkg/: async_kernel-0.1a1-py3-none-any.whl  async_kernel-0.1b0-py3-none-any.whl  async_kernel-0.1b1-py3-none-any.whl  async_kernel-0.1b2-py3-none-any.whl  async_kernel-0.1b6-py3-none-any.whl  ipykernel-7.0.0a1-py3-none-any.whl  ipywidgets-8.1.5-py3-none-any.whl  jupyter_client-8.6.3-py3-none-any.whl  jupyterlab_widgets-3.0.13-py3-none-any.whl  traitlets-5.14.3-py3-none-any.whl  widgetsnbextension-4.0.13-py3-none-any.whl
schema/: settings.json
src/: observable_disposable.ts  plugin.ts  utils.ts  widget.ts
src/widgets/: autoscroll.ts  autostart.ts  code_editor.ts  commands.ts  connection.ts  cssstylesheet.ts  dialog.ts  frontend.ts  icon.ts  ipylab.ts  notification.ts  panel.ts  resize_box.ts  sessions.ts  shell.ts  simple_output.ts  split_panel.ts  title.ts  toolbar.ts  utils.ts
style/: widget.css
tests/: conftest.py  test_common.py  test_ipylab.py  test_jupyterfrontend.py  test_log.py
